plugins {
    id 'java'

}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
group 'net.tiny.crypto'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.agrona', name: 'agrona', version: '1.19.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

test {
    useJUnitPlatform()
//    options.compilerArgs += [ "--enable-preview"]
    systemProperty "java.library.path", file("/home/isaiahp/workspace/crypto/libsodium-stable/target/lib")
//
//
//    test.dependsOn  ':tiny-io-jni:linkDebug'
}
